chore: fix toolbar icons align

--- a/src/components/editor/Toolbar/Toolbar.module.css
+++ b/src/components/editor/Toolbar/Toolbar.module.css
@@ -33,3 +33,9 @@
   max-width: 300px;
   z-index: 1000;
 }
+
+.toolBarMenuButtons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
